# polymarket_stats_bot

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  docker-compose.tests.yml  docker-compose.yml  healthcheck.py  local-check.sh  main.py  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 00_00_01_initial_migration.py
app/: app.py  config.py
app/clients/: base_client.py  polymarket_data_client.py  polymarket_gamma_client.py
app/common/: common_repository.py  database.py  logger.py  models.py
app/healthcheck/: app.py
app/models/: __init__.py  bettor.py  bettor_stats.py  subscription.py  user.py
app/repository/: bettor_repository.py  subscription_repository.py  user_repository.py
app/schemas/: polymarket_data.py  polymarket_gamma.py
app/tasks/: bettor_stats_task.py  trades_task.py
app/tg_bot/: bot.py
app/use_cases/: bettor_use_cases.py  polymarket_use_cases.py  subscription_use_cases.py  user_use_cases.py
app/utils/: extract_zip.py  import_submodules.py
tests/: conftest.py  test_bettor_use_cases.py  test_polymarket_data_client.py  test_polymarket_gamma_client.py  test_polymarket_use_cases.py  test_subscription_use_cases.py  test_tg_bot.py  test_user_use_cases.py
tests/env/: test.env
